pi-cluster/deployments/squid-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: squid-proxy
spec:
  type: ClusterIP
  selector:
    app: proxy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
