pi-cluster/deployments/squid-proxy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy
  namespace: squid-proxy
  labels:
    app: proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - proxy.charlieegan3.com
    secretName: proxy-tls
  rules:
  - host: proxy.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 80
